# math_exos

./: README.md  main.py  main_page.py  pyproject.toml  requirements.txt
examples/: main.py
math_exo/: base_problems.py  generate_tex.py  internationalization.py  problems.py  utils.py
math_exo/babel/: arabic.txt  chinease.txt  english.txt  french.txt  german.txt  italian.txt  polish.txt
src/math_exo/: base_problems.py  generate_tex.py  problems.py  utils.py
